# gnome-device-mng-gui

./: LICENSE  README.md  meson.build
data/: meson.build  org.gnome.DeviceMngGui.desktop.in
src/: app.c  app.h  main.c  meson.build  window.c  window.h
